fix scrollbar isse with hidden textarea

--- a/css/jquery.terminal-1.9.0.css
+++ b/css/jquery.terminal-1.9.0.css
@@ -12,7 +12,7 @@
  * Copyright (c) 2011-2017 Jakub Jankiewicz <http://jcubic.pl>
  * Released under the MIT license
  *
- * Date: Thu, 26 Oct 2017 11:00:18 +0000
+ * Date: Thu, 26 Oct 2017 11:51:44 +0000
  */
 .terminal .terminal-output .format, .cmd .format,
 .cmd .prompt, .cmd .prompt div, .terminal .terminal-output div div{
@@ -35,7 +35,7 @@
 .cmd .clipboard {
     position: absolute;
     left: -4em;
-    top: 0;
+    top: -4em;
     width: 5em;
     height: 4em;
     /* this seems to work after all on Android */
