--- a/css/jquery.terminal-src.css
+++ b/css/jquery.terminal-src.css
@@ -35,7 +35,7 @@
 .cmd .clipboard {
     position: absolute;
     left: -4em;
-    top: 0;
+    top: -4em;
     width: 5em;
     height: 4em;
     /* this seems to work after all on Android */
